--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ __pycache__/order.cpython-37.pyc
 __pycache__/shift.cpython-37.pyc
 __pycache__/utility.cpython-37.pyc
 __pycache__/utility_function.cpython-37.pyc
+td.bat
